[package]
name = "bridge_x"
version = "0.1.0"
edition = "2024"

[dependencies]
bluer = { version = "0.17", features = ["bluetoothd"] }
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.21.3"
futures = "0.3.31"
env_logger = "0.11.8"
thread = "0.0.1"
serde_json = "1.0"
byteorder = "1.5.0"
bytes = "1.10.1"
tokio-stream = "0.1.17"
tokio-util = "0.7.16"
tokio-util-codec-compose = "0.1.2"
thiserror = "2.0.17"
